--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 
 <!DOCTYPE html>
 <html> 
-<!-- <class="theme theme-white"> -->
 <head>
 <meta charset="utf-8">
-<title>AutoTouch Document</title>
+<title>Functions+ Help Document</title>
 <link href="FPlus-Theme.css" rel="stylesheet" media="screen">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script>
@@ -37,9 +36,14 @@ $(document).ready(function() {
 <body>
 <div id="wmd-preview" class="wmd-preview wmd-preview-full-reader"><div class="md-section-divider"></div><div class="md-section-divider"></div><h1 data-anchor-id="vmg4">Functions+ Help Document</h1><p data-anchor-id="63nq"><code>Requires latest version (v3.5.3+) - Made by /u/shirtandtieler</code></p>
 <pre data-anchor-id="pla5"><code>
-The idea for this script came to me almost a year ago - I wanted to create a way to seamlessly integrate custom functions with AutoTouch. After <i>many</i> hours of hard work, I have created a whole spectrum of different useful functions. 
+The idea for this script came to me almost a year ago - I wanted to create a way to seamlessly integrate custom 
+functions with AutoTouch. After <i>many</i> hours of hard work, I have created a whole spectrum of different 
+useful functions. 
 
-Note that this help file is *far* from done. I'll eventually fix the awkward sounding sentences and colorize the examples. I'll also (eventually) fill out the functions that have missing info - though they're all in the color-format-conversion family (hexToInt, rgbToHex, etc), thus they're all pretty much the same thing.
+Note that this help file is far from done. I'll eventually fix the awkward sounding sentences and colorize the 
+examples. I'll also (eventually) fill out the few functions that have missing info 
+- though they're all in the color-format-conversion family (hexToInt, rgbToHex, etc) 
+and boolean checks (isStr, isTable, isNil, etc).
 
 Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 </code></pre>
@@ -100,12 +104,13 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 			<li class="nested"><a href="#string.startswith">string.startswith</a></li>
 			<li class="nested"><a href="#string.trim">string.trim</a></li>
 		</ol>
+	<li class="nested"><a href="#clrOptions"> xToName Color Scheme Options </a></li>
 </ol>
 
 
 <div class="md-section-divider"></div>
 
-<h3 id="faqs"> FAQs </h3>
+<h3 id="faqs"><u> FAQs </u></h3>
 
 <div class="accordion">
 
@@ -170,6 +175,9 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 </div><!--end .accordion-->
 
 <div class="md-section-divider"></div>
+<br/>
+<div class="md-section-divider"></div>
+
 
 <h3 id="funcAlpha"><u> Functions (A-Z) </u></h3>
 
@@ -2221,6 +2229,36 @@ specified format.<br>If you want it to go back to the default settings, run the 
 	</tr>
 </tbody></table>
 <p data-anchor-id="a5pi"><code>Example(s)</code></p><div class="md-section-divider"></div><pre class="prettyprint linenums prettyprinted" data-anchor-id="grcy"><ol class="linenums"><li class="L0"><code class="language-lua">code = "    if x then y"</code></li><li class="L1"><code class="language-lua">trimmedCode = string.trim(code)</code></li><li class="L2"><code class="language-lua">-- trimmedCode == "if x then y"</code></li><li class="L3"><code class="language-lua"></code></li><li class="L4"><code class="language-lua">title = " [    HELLO    ] "</code></li><li class="L5"><code class="language-lua">trimmedTitle = title:trim()</code></li><li class="L6"><code class="language-lua">-- trimmedTitle == "[    HELLO    ]"</code></li><li class="L7"><code class="language-lua"></code></li></ol></pre><div class="md-section-divider"></div>
-
+<br><br>
+<h3 id="clrOptions"><u> FAQs </u></h3>
+<p>For the xToName functions, the second parameter allows for a "colorScheme". Of the 4 choices for schemes, pick the one which suits your needs the best. </p>
+<p>Below, I list a description of all 4 and your options for the "colorScheme" parameter.</p>
+<p>Note that, for each of the color schemes, each level builds upon the previous; in addition, colors #1 takes 3 from grayscale, #2 takes 9 from grayscale, and #3 takes the remaining 7 from grayscale.</p>
+<ol>
+	<li>Grayscale - This scheme includes black and white, along with 19 shades of gray in between. Available options to use this scheme are:</li>
+	<ul>
+		<li>0</li>
+		<li>"gray"</li>
+		<li>"grey"</li>
+	</ul>
+	<li>Colors #1 - This scheme has 20 colors total (3 previous + 17 new). Available options to use this scheme are:</li>
+	<ul>
+		<li>1</li>
+		<li>"small"</li>
+		<li>"basic"</li>
+	</ul>
+	<li>Colors #2 - This scheme has 59 colors total (20 previous + 39 new). Available options to use this scheme are:</li>
+	<ul>
+		<li>2</li>
+		<li>"medium"</li>
+		<li>"indepth"</li>
+	</ul>
+	<li>Colors #3 - This scheme has 89 colors total (59 previous + 30 new). Available options to use this scheme are:</li>
+	<ul>
+		<li>3</li>
+		<li>"large"</li>
+		<li>"complete"</li>
+	</ul>
+</ol>
 </body>
 </html>
