--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@ $(document).ready(function() {
 <pre data-anchor-id="pla5"><code>
 The idea for this script came to me almost a year ago - I wanted to create a way to seamlessly integrate custom 
 functions with AutoTouch. After <i>many</i> hours of hard work, I have created a whole spectrum of different 
-useful functions. 
+useful functions.
 
 Note that this help file is far from done. I'll eventually fix the awkward sounding sentences and colorize the 
-examples. I'll also (eventually) fill out the few functions that have missing info 
+examples. I'll also (again, eventually) fill out the few functions that have missing info 
 - though they're all in the color-format-conversion family (hexToInt, rgbToHex, etc) 
 and boolean checks (isStr, isTable, isNil, etc).
 
@@ -104,7 +104,7 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 			<li class="nested"><a href="#string.startswith">string.startswith</a></li>
 			<li class="nested"><a href="#string.trim">string.trim</a></li>
 		</ol>
-	<li class="nested"><a href="#clrOptions"> xToName Color Scheme Options </a></li>
+	<li>3. <a href="#clrOptions"> xToName Color Scheme Options </a></li>
 </ol>
 
 
