--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 			<li class="nested"><a href="#string.startswith">string.startswith</a></li>
 			<li class="nested"><a href="#string.trim">string.trim</a></li>
 		</ol>
-	<li>3. <a href="#clrOptions"> xToName Color Scheme Options </a></li>
+	3. <a href="#clrOptions"> xToName Color Scheme Options </a></li>
 </ol>
 
 
