--- a/index.html
+++ b/index.html
@@ -40,17 +40,19 @@ The idea for this script came to me almost a year ago - I wanted to create a way
 functions with AutoTouch. After <i>many</i> hours of hard work, I have created a whole spectrum of different 
 useful functions.
 
-Note that this help file is far from done. I'll eventually fix the awkward sounding sentences and colorize the 
-examples. I'll also (again, eventually) fill out the few functions that have missing info 
-- though they're all in the color-format-conversion family (hexToInt, rgbToHex, etc) 
-and boolean checks (isStr, isTable, isNil, etc).
+Note that there's still much to be done within this help document. I still need to...
+	> Fix any awkward sounding sentences
+	> Colorize the examples
+	> Fill out the few functions that have missing info 
+		|-> some of the color-format-conversion family (hexToInt, rgbToHex, etc) 
+ 		|-> and some of boolean check functions (isStr, isTable, isNil, etc)
 
 Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 </code></pre>
 
 <div class="md-section-divider"></div>
 
-<h3 id="top"> Contents </h3>
+<h3 id="top"> Contents - Sort Method: </h3> alpha | type
 <ol class="nested">
 	<li class="nested"><a href="#faqs"> FAQs </a></li>
 	<li class="nested"><a href="#funcAlpha"> Functions </a></li>
