--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 
 <div class="md-section-divider"></div>
 
-<h3 id="top"> Contents - Sort Method: </h3> alpha | type
+<div><h3 id="top" text-align="left" float="left"> Contents - Sort Method: </h3> <h6 text-align="right" float="right">alpha | type</h6></div>
 <ol class="nested">
 	<li class="nested"><a href="#faqs"> FAQs </a></li>
 	<li class="nested"><a href="#funcAlpha"> Functions </a></li>
