--- a/index.html
+++ b/index.html
@@ -52,7 +52,16 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 
 <div class="md-section-divider"></div>
 
-<div><h3 id="top" text-align="left" float="left"> Contents - Sort Method: </h3> <h6 text-align="right" float="right">alpha | type</h6></div>
+<div>
+	<h3 id="top"> Contents - Sort Method: </h3>
+	<div class="onoffswitch">
+	    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+	    <label class="onoffswitch-label" for="myonoffswitch">
+	        <span class="onoffswitch-inner"></span>
+	        <span class="onoffswitch-switch"></span>
+	    </label>
+	</div>
+</div>
 <ol class="nested">
 	<li class="nested"><a href="#faqs"> FAQs </a></li>
 	<li class="nested"><a href="#funcAlpha"> Functions </a></li>
