--- a/index.html
+++ b/index.html
@@ -51,16 +51,17 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 </code></pre>
 
 <div class="md-section-divider"></div>
-<div class="contentContainer">
-	<div class="contentText"><h3 id="top"> Contents - Sort Method: </h3></div>
-	<div class="onoffswitch">
-	    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="sortMethod" checked>
-	    <label class="onoffswitch-label" for="sortMethod">
-	        <span class="onoffswitch-inner"></span>
-	        <span class="onoffswitch-switch"></span>
-	    </label>
-	</div>
+
+
+<h3 id="top"> Contents - Sort Method: </h3>
+<div class="onoffswitch">
+    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="sortMethod" checked>
+    <label class="onoffswitch-label" for="sortMethod">
+        <span class="onoffswitch-inner"></span>
+        <span class="onoffswitch-switch"></span>
+    </label>
 </div>
+
 <ol class="nested">
 	<li class="nested"><a href="#faqs"> FAQs </a></li>
 	<li class="nested"><a href="#funcAlpha"> Functions </a></li>
