--- a/index.html
+++ b/index.html
@@ -52,15 +52,22 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 
 <div class="md-section-divider"></div>
 
-
-<h3 id="top"> Contents - Sort Method: </h3>
-<div class="onoffswitch">
-    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="sortMethod" checked>
-    <label class="onoffswitch-label" for="sortMethod">
-        <span class="onoffswitch-inner"></span>
-        <span class="onoffswitch-switch"></span>
-    </label>
-</div>
+<table>
+	<tr>
+		<td>
+			<h3 id="top"> Contents - Sort Method: </h3>
+		</td>
+		<td>
+			<div class="onoffswitch">
+			    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="sortMethod" checked>
+			    <label class="onoffswitch-label" for="sortMethod">
+			        <span class="onoffswitch-inner"></span>
+			        <span class="onoffswitch-switch"></span>
+			    </label>
+			</div>
+		</td>
+	</tr>
+</table>
 
 <ol class="nested">
 	<li class="nested"><a href="#faqs"> FAQs </a></li>
