--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 
 <div class="md-section-divider"></div>
 
-<table>
+<table id="contentTable">
 	<tr>
 		<td>
 			<h3 id="top"> Contents - Sort Method: </h3>
