--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 		</td>
 		<td>
 			<div class="onoffswitch">
-			    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="sortMethod" checked>
+			    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="sortMethod" onchange="sortdiv()" checked>
 			    <label class="onoffswitch-label" for="sortMethod">
 			        <span class="onoffswitch-inner"></span>
 			        <span class="onoffswitch-switch"></span>
