--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ $(document).ready(function() {
 });
 
 function sortdiv() {
+	window.alert(document.getElementById("toc").checked);
 	var container = document.getElementById("toc");
 	var elements = container.childNodes;
 	var sortMe = [];
