--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ $(document).ready(function() {
     });
 });
 
-function sortdiv() {
-	window.alert(document.getElementById("toc").checked);
+function sortdiv(element) {
+	window.alert(element.checked);
 	var container = document.getElementById("toc");
 	var elements = container.childNodes;
 	var sortMe = [];
@@ -81,7 +81,7 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 		</td>
 		<td>
 			<div class="onoffswitch">
-			    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="sortMethod" onchange="sortdiv()" checked>
+			    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="sortMethod" onchange="sortdiv(this)" checked>
 			    <label class="onoffswitch-label" for="sortMethod">
 			        <span class="onoffswitch-inner"></span>
 			        <span class="onoffswitch-switch"></span>
