--- a/index.html
+++ b/index.html
@@ -33,24 +33,45 @@ $(document).ready(function() {
 });
 
 function sortdiv(element) {
-	window.alert(element.checked);
-	var container = document.getElementById("toc");
-	var elements = container.childNodes;
-	var sortMe = [];
-	for (var i=0; i<elements.length; i++) {
-	    if (!elements[i].id) {
-	        continue;
-	    }
-	    var sortPart = elements[i].id.split("-");
-	    if (sortPart.length > 1) {
-	        sortMe.push([ 1 * sortPart[1] , elements[i] ]);
-	    }
-	}
-	sortMe.sort(function(x, y) {
-	    return x[0] - y[0];
-	});
-	for (var i=0; i<sortMe.length; i++) {
-	    container.appendChild(sortMe[i][1]);
+	if (!element.checked) {
+		var container = document.getElementById("toc");
+		var elements = container.childNodes;
+		var sortMe = [];
+		for (var i=0; i<elements.length; i++) {
+		    if (!elements[i].id) {
+		        continue;
+		    }
+		    var sortPart = elements[i].id.split("-");
+		    if (sortPart.length > 1) {
+		        sortMe.push([ 1 * sortPart[1] , elements[i] ]);
+		    }
+		}
+		sortMe.sort(function(x, y) {
+		    return x[0] - y[0];
+		});
+		for (var i=0; i<sortMe.length; i++) {
+		    container.appendChild(sortMe[i][1]);
+		}
+	} else {
+		var container = document.getElementById("toc");
+		var elements = container.childNodes;
+		var sortMe = [];
+		for (var i=0; i<elements.length; i++) {
+			if (!elements[i].id) {
+				continue;
+			}
+	       	    var sortPart = elements[i].id.split("-");
+		    if (sortPart.length > 1) {
+		        sortMe.push([sortPart[0] , elements[i] ]);
+		    }
+		}
+		sortMe.sort(function(x, y) {
+		    return x[0] - y[0];
+		});
+		for (var i=0; i<sortMe.length; i++) {
+		    container.appendChild(sortMe[i][0]);
+		}
+		}
 	}
 }
 </script>
