--- a/index.html
+++ b/index.html
@@ -31,49 +31,6 @@ $(document).ready(function() {
         e.preventDefault();
     });
 });
-
-function sortdiv(element) {
-	if (!element.checked) {
-		var container = document.getElementById("toc");
-		var elements = container.childNodes;
-		var sortMe = [];
-		for (var i=0; i<elements.length; i++) {
-		    if (!elements[i].id) {
-		        continue;
-		    }
-		    var sortPart = elements[i].id.split("-");
-		    if (sortPart.length > 1) {
-		        sortMe.push([ 1 * sortPart[1] , elements[i] ]);
-		    }
-		}
-		sortMe.sort(function(x, y) {
-		    return x[0] - y[0];
-		});
-		for (var i=0; i<sortMe.length; i++) {
-		    container.appendChild(sortMe[i][1]);
-		}
-	} else {
-		var container = document.getElementById("toc");
-		var elements = container.childNodes;
-		var sortMe = [];
-		for (var i=0; i<elements.length; i++) {
-			if (!elements[i].id) {
-				continue;
-			}
-	       	    var sortPart = elements[i].id.split("-");
-		    if (sortPart.length > 1) {
-		        sortMe.push([sortPart[0] , elements[i] ]);
-		    }
-		}
-		sortMe.sort(function(x, y) {
-		    return x[0] - y[0];
-		});
-		for (var i=0; i<sortMe.length; i++) {
-		    container.appendChild(sortMe[i][1]);
-		}
-	}
-};
-
 </script>
 </head>
 <body>
@@ -102,7 +59,7 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 		</td>
 		<td>
 			<div class="onoffswitch">
-			    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="sortMethod" onchange="sortdiv(this)" checked>
+			    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="sortMethod" checked>
 			    <label class="onoffswitch-label" for="sortMethod">
 			        <span class="onoffswitch-inner"></span>
 			        <span class="onoffswitch-switch"></span>
@@ -116,56 +73,54 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 	<li class="nested"><a href="#faqs"> FAQs </a></li>
 	<li class="nested"><a href="#funcAlpha"> Functions </a></li>
 		<ol class="nested">
-		<div id="toc">
-			<div id="clear-file"><li class="nested"><a href="#clear">clear</a></li></div>
-			<div id="copyFile-file"><li class="nested"><a href="#copyFile">copyFile</a></li></div>
-			<div id="count-logic"><li class="nested"><a href="#count">count</a></li></div>
-			<div id="div-math"><li class="nested"><a href="#div">div</a></li></div>
-			<div id="draw-action"><li class="nested"><a href="#draw">draw</a></li></div>
-			<div id="exe-action"><li class="nested"><a href="#exe">exe</a></li></div>
-			<div id="fileExists-file"><li class="nested"><a href="#fileExists">fileExists</a></li></div>
-			<div id="editLog-file"><li class="nested"><a href="#formatLog">formatLog</a></li></div>
-			<div id="getActiveApp-logic"><li class="nested"><a href="#getActiveApp">getActiveApp</a></li></div>
-			<div id="getDir-file"><li class="nested"><a href="#getDir">getDir</a></li></div>
-			<div id="getFileSize-file"><li class="nested"><a href="#getFileSize">getFileSize</a></li></div>
-			<div id="getLine-file"><li class="nested"><a href="#getLine">getLine</a></li></div>
-			<div id="getLines-file"><li class="nested"><a href="#getLines">getLines</a></li></div>
-			<div id="file"><li class="nested"><a href="#help">help</a></li></div>
-			<div id="hexToInt-conv"><li class="nested"><a href="#hexToInt">hexToInt</a></li></div>
-			<div id="hexToName-conv"><li class="nested"><a href="#hexToName">hexToName</a></li></div>
-			<div id="hexToRgb-conv"><li class="nested"><a href="#hexToRgb">hexToRgb</a></li></div>
-			<div id="intToHex-conv"><li class="nested"><a href="#intToHex">intToHex</a></li></div>
-			<div id="intToName-conv"><li class="nested"><a href="#intToName">intToName</a></li></div>
-			<div id="isBool-logic"><li class="nested"><a href="#isBool">isBool</a></li></div>
-			<div id="isNil-logic"><li class="nested"><a href="#isNil">isNil</a></li></div>
-			<div id="isNotNil-logic"><li class="nested"><a href="#isNotNil">isNotNil</a></li></div>
-			<div id="isNum-logic"><li class="nested"><a href="#isNum">isNum</a></li></div>
-			<div id="isStr-logic"><li class="nested"><a href="#isStr">isStr</a></li></div>
-			<div id="isTable-logic"><li class="nested"><a href="#isTable">isTable</a></li></div>
-			<div id="isin-logic"><li class="nested"><a href="#isin">isin</a></li></div>
-			<div id="isnotin-logic"><li class="nested"><a href="#isnotin">isnotin</a></li></div>
-			<div id="join-string"><li class="nested"><a href="#join">join</a></li></div>
-			<div id="logic"><li class="nested"><a href="#len">len</a></li></div>
-			<div id="logTable-action"><li class="nested"><a href="#logTable">logTable</a></li></div>
-			<div id="merge-table"><li class="nested"><a href="#merge">merge</a></li></div>
-			<div id="num-conv"><li class="nested"><a href="#num">num</a></li></div>
-			<div id="pause-action"><li class="nested"><a href="#pause">pause</a></li></div>
-			<div id="print-action"><li class="nested"><a href="#print">print</a></li></div>
-			<div id="replaceInFile-file"><li class="nested"><a href="#replaceInFile">replaceInFile</a></li></div>
-			<div id="rgbToHex-conv"><li class="nested"><a href="#rgbToHex">rgbToHex</a></li></div>
-			<div id="rgbToName-conv"><li class="nested"><a href="#rgbToName">rgbToName</a></li></div>
-			<div id="round-math"><li class="nested"><a href="#round">round</a></li></div>
-			<div id="scroll-action"><li class="nested"><a href="#scroll">scroll</a></li></div>
-			<div id="search-file"><li class="nested"><a href="#search">search</a></li></div>
-			<div id="str-conv"><li class="nested"><a href="#str">str</a></li></div>
-			<div id="string.endswith-string"><li class="nested"><a href="#string.endswith">string.endswith</a></li></div>
-			<div id="string.format-string"><li class="nested"><a href="#string.format">string.format</a></li></div>
-			<div id="string.replace-string"><li class="nested"><a href="#string.replace">string.replace</a></li></div>
-			<div id="string.split-string"><li class="nested"><a href="#string.split">string.split</a></li></div>
-			<div id="string.startswith-string"><li class="nested"><a href="#string.startswith">string.startswith</a></li></div>
-			<div id="string.trim-string"><li class="nested"><a href="#string.trim">string.trim</a></li></div>
-			<div id="tblsEqual-logic"><li class="nested"><a href="#string.trim">tblsEqual</a></li></div>
-		</div>
+			<li class="nested"><a href="#clear">clear</a></li>
+			<li class="nested"><a href="#copyFile">copyFile</a></li>
+			<li class="nested"><a href="#count">count</a></li>
+			<li class="nested"><a href="#div">div</a></li>
+			<li class="nested"><a href="#draw">draw</a></li>
+			<li class="nested"><a href="#exe">exe</a></li>
+			<li class="nested"><a href="#fileExists">fileExists</a></li>
+			<li class="nested"><a href="#formatLog">formatLog</a></li>
+			<li class="nested"><a href="#getActiveApp">getActiveApp</a></li>
+			<li class="nested"><a href="#getDir">getDir</a></li>
+			<li class="nested"><a href="#getFileSize">getFileSize</a></li>
+			<li class="nested"><a href="#getLine">getLine</a></li>
+			<li class="nested"><a href="#getLines">getLines</a></li>
+			<li class="nested"><a href="#help">help</a></li>
+			<li class="nested"><a href="#hexToInt">hexToInt</a></li>
+			<li class="nested"><a href="#hexToName">hexToName</a></li>
+			<li class="nested"><a href="#hexToRgb">hexToRgb</a></li>
+			<li class="nested"><a href="#intToHex">intToHex</a></li>
+			<li class="nested"><a href="#intToName">intToName</a></li>
+			<li class="nested"><a href="#isBool">isBool</a></li>
+			<li class="nested"><a href="#isNil">isNil</a></li>
+			<li class="nested"><a href="#isNotNil">isNotNil</a></li>
+			<li class="nested"><a href="#isNum">isNum</a></li>
+			<li class="nested"><a href="#isStr">isStr</a></li>
+			<li class="nested"><a href="#isTable">isTable</a></li>
+			<li class="nested"><a href="#isin">isin</a></li>
+			<li class="nested"><a href="#isnotin">isnotin</a></li>
+			<li class="nested"><a href="#join">join</a></li>
+			<li class="nested"><a href="#len">len</a></li>
+			<li class="nested"><a href="#logTable">logTable</a></li>
+			<li class="nested"><a href="#merge">merge</a></li>
+			<li class="nested"><a href="#num">num</a></li>
+			<li class="nested"><a href="#pause">pause</a></li>
+			<li class="nested"><a href="#print">print</a></li>
+			<li class="nested"><a href="#replaceInFile">replaceInFile</a></li>
+			<li class="nested"><a href="#rgbToHex">rgbToHex</a></li>
+			<li class="nested"><a href="#rgbToName">rgbToName</a></li>
+			<li class="nested"><a href="#round">round</a></li>
+			<li class="nested"><a href="#scroll">scroll</a></li>
+			<li class="nested"><a href="#search">search</a></li>
+			<li class="nested"><a href="#str">str</a></li>
+			<li class="nested"><a href="#string.endswith">string.endswith</a></li>
+			<li class="nested"><a href="#string.format">string.format</a></li>
+			<li class="nested"><a href="#string.replace">string.replace</a></li>
+			<li class="nested"><a href="#string.split">string.split</a></li>
+			<li class="nested"><a href="#string.startswith">string.startswith</a></li>
+			<li class="nested"><a href="#string.trim">string.trim</a></li>
+			<li class="nested"><a href="#string.trim">tblsEqual</a></li>
 		</ol>
 	3. <a href="#clrOptions"> xToName Color Scheme Options </a></li>
 </ol>
