--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ $(document).ready(function() {
 });
 
 function switchPage() {
-	window.location='index_typeSort.html#top';
+	window.location='index_typeSort.html';
 	return false;
 }
 </script>
