--- a/index_typeSort.html
+++ b/index_typeSort.html
@@ -77,6 +77,7 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 <ol class="nested">
 	<li class="nested"><a href="#faqs"> FAQs </a></li>
 	<li class="nested"><a href="#funcAlpha"> Functions </a>
+	<ol class="nested">
 		<li class="nested">Checks / Logic
 			<ol class="nested">
 				<li class="nested"><a href="#getActiveApp">getActiveApp</a></li>
@@ -149,6 +150,7 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 				<li class="nested"><a href="#rgbToName">rgbToName</a></li>
 			</ol>
 		</li>
+	</ol>
 	</li>
 	<li><a href="#clrOptions"> xToName Color Scheme Options </a></li>
 </ol>
