--- a/index_typeSort.html
+++ b/index_typeSort.html
@@ -150,9 +150,9 @@ Enjoy! (And contact me on reddit if you have any questions/problems/suggestions)
 				<li class="nested"><a href="#rgbToName">rgbToName</a></li>
 			</ol>
 		</li>
-	<li><a href="#clrOptions"> xToName Color Scheme Options </a></li>
 	</ol>
 	</li>
+	<li class="nested"><a href="#clrOptions"> xToName Color Scheme Options </a></li>
 </ol>
 
 
